feat(accounting): add api to get deliveries
